--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,15 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.6
   currency_text_input_formatter: ^2.2.3
+  shared_preferences: ^2.2.2
+  flutter_launcher_icons: "^0.13.1"
+  intl: ^0.18.0
+  image_picker: ^0.8.7+5
+  path_provider: ^2.0.15
   flutter:
     sdk: flutter
   provider: ^6.1.2
+  
 
 dev_dependencies:
 
@@ -81,3 +87,21 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "path/to/image.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "path/to/image.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "path/to/image.png"
